--- a/oo-js/index.html
+++ b/oo-js/index.html
@@ -72,8 +72,8 @@
 
 <body>
   <article>
-    <h1>Object Oriented JS</h1>
-    <video id="vid" src="rendered.mp4" controls></video>
+    <h1>Object Oriented JS!</h1>
+    <video id="vid" src="https://s3-eu-west-1.amazonaws.com/storage.spacedog.tech/ada/rendered.mp4" controls></video>
     <div class="speedControls">
       <button type="button" data-value="1">Speed: 1x</button>
       <button type="button" data-value="1.25">Speed: 1.25x</button>
