add captions to node video

--- a/node/index.html
+++ b/node/index.html
@@ -76,7 +76,7 @@
     <video id="vid" controls>
       <source src="rendered.mp4" type="video/mp4">
       <source src="https://s3-eu-west-1.amazonaws.com/storage.spacedog.tech/ada/screencasts/node-js.mp4" type="video/mp4">
-      <!-- <track label="English" kind="subtitles" srclang="en" src="captions.vtt" default> -->
+      <track label="English" kind="subtitles" srclang="en" src="captions.vtt" default>
     </video>
     <div class="speedControls">
       <button type="button" data-value="1">Speed: 1x</button>
