--- a/index.html
+++ b/index.html
@@ -18,7 +18,14 @@
       font-family: 'Titillium Web', sans-serif;
     }
 
+    main {
+      max-width: 600px;
+      width: calc(100% - 4rem);
+      margin: auto;
+    }
+
     a {
+      display: block;
       color: white;
       border: 1px solid white;
       background: rgba(255, 255, 255, 0.1);
@@ -34,12 +41,15 @@
 </head>
 
 <body>
-  <h1>Screen Casts</h1>
-  <a href="oo-js/index.html">Object Oriented JavaScript</a>
-  <a href="node/index.html">Node.js</a>
-  <a href="person-workshop-1/index.html">Person Workshop 1 - Setting up a Project</a>
-  <a href="person-workshop-2/index.html">Person Workshop 2 - TDDing a Person Class</a>
-  <a href="person-workshop-3/index.html">Person Workshop 3 - TDDing an AddressBook</a>
+  <main>
+    <h1>Screen Casts</h1>
+    <a href="oo-js/index.html">Object Oriented JavaScript</a>
+    <a href="node/index.html">Node.js</a>
+    <a href="person-workshop-1/index.html">Person Workshop 1 - Setting up a Project</a>
+    <a href="person-workshop-2/index.html">Person Workshop 2 - TDDing a Person Class</a>
+    <a href="person-workshop-3/index.html">Person Workshop 3 - TDDing an AddressBook</a>
+    <a href="async-js/index.html">Async JavaScript</a>
+  </main>
 </body>
 
 </html>
